--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "conclock",
   "version": "1.0.0",
   "description": "ConClock server.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
