--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "conclock",
   "version": "1.0.0",
   "description": "ConClock server.",
-  "main": "index.ts",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
-    "start": "node index.ts",
+    "start": "node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
