--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Lladnaar/conclock#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "redis": "^5.8.0"
+    "redis": "^5.8.0",
+    "uuid": "^11.1.0"
   }
 }
