--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Lladnaar/conclock#readme",
   "dependencies": {
+    "@types/express": "^5.0.3",
     "express": "^5.1.0",
     "redis": "^5.8.0",
     "uuid": "^11.1.0"
