--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon server/main.ts",
     "lint": "tsc & eslint .",
+    "test": "vitest --run",
     "start": "node server/main.ts",
     "build": "docker build -t conclock ."
   },
@@ -24,8 +25,10 @@
     "@stylistic/eslint-plugin": "^5.2.3",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "axios": "^1.12.1",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
-    "typescript-eslint": "^8.41.0"
+    "typescript-eslint": "^8.41.0",
+    "vitest": "^3.2.4"
   }
 }
