--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,3 +23,31 @@ jobs:
 
       - name: Lint project
         run: npm run lint
+
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Setup redis
+        uses: supercharge/redis-github-action@1.2.0
+        with: 
+          redis-version: 8
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Start server
+        run: npm run start &
+
+      - name: Run tests
+        run: npm run test
